# Ursa

./: .coverage  .dockerignore  .gitignore  BLINK.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  PLAN.md  README.md  ROADMAP.md  SECURITY.md  blink.toml  deep-research-report.md  deploy  pyproject.toml  requirements.txt  server.py  suite  ursa.yaml.example
.blink/artifacts/ursa-major/: 05815be4df15ef936e406700302c1bf65149df09c470be04db381bb531ec9f74-ursa-major-repo.tgz.json  8a2ef15318f262237ffa7853b9aa65f286e38cd8465e6a15b9e8c7f110e04d28-ursa-major-repo.tgz  8a2ef15318f262237ffa7853b9aa65f286e38cd8465e6a15b9e8c7f110e04d28-ursa-major-repo.tgz.json  a92995af3a5d6a5dcb4a26b065b21718a4117f32ded1c71b257c2716c907464c-ursa-major-repo.tgz.json  bde2f6009abf6650e065c3ad3e31cc6a4813a49ff8f4bcb3500fa9ed4c33eecf-ursa-major-repo.tgz  bde2f6009abf6650e065c3ad3e31cc6a4813a49ff8f4bcb3500fa9ed4c33eecf-ursa-major-repo.tgz.json  (+1 more)
.blink/history/: 20260319T214406Z-d0e4ec98.json  20260319T214540Z-3e214847.json  20260319T214651Z-16c64b70.json  20260319T214703Z-e50d3796.json  20260319T214756Z-0985c67b.json  20260320T005530Z-61a42913.json  20260320T122342Z-aa6a9453.json  20260320T231249Z-31746f51.json  20260320T231311Z-3bf3d2b5.json  20260321T012108Z-a4e76e91.json  20260321T012424Z-471f430e.json
.blink/state/: current.json  recent_runs.json
.claude/: launch.json
.claude/scripts/: ursa-preview.sh
.github/workflows/: ci.yml
deploy/: ursa-major.compose.yaml
implants/: README.md  beacon.py  builder.py  evasion.py  stager.py
implants/templates/: http_go.go  http_python.py  http_zig.zig
major/: README.md  __init__.py  c2.py  cert.py  config.py  cp.py  crypto.py  db.py  governance.py  profiles.py  redirector.py  server.py
major/listeners/: dns.py  smb.py
major/web/: __main__.py  app.py  auth.py
major/web/routes/: api.py  auth.py  files.py  (+7 more)
minor/: README.md  arpspoof.py  credspray.py  dirbust.py  discover.py  hashcrack.py  osfinger.py  portscan.py  pyproject.toml  recon.py  revshell.py  server.py  smbenum.py  sniff.py  snmpscan.py  subenum.py  vulnscan.py
minor/src/ursa_minor/: __init__.py  cli.py  defense.py  results.py  server.py
post/: __init__.py  base.py  loader.py
post/cred/: __init__.py  browser.py  keychain.py  loot.py  memory.py
post/enum/: __init__.py  loot.py  network.py  privesc.py  sysinfo.py  users.py
post/lateral/: __init__.py  pth.py  ssh.py  wmi.py
post/persist/: __init__.py  cron.py  launchagent.py  registry.py
skills/: SKILL.md
tests/: conftest.py  test_builder.py  test_evasion.py  test_phase6.py  test_recon_tools.py  test_results_mcp.py
tests/major/: test_crypto.py  test_db.py  test_governance.py  test_server.py  test_web.py
tests/minor/: test_defense.py  test_hash_cracking.py  test_network_tools.py  test_pure_functions.py  test_results.py
tests/test_post/: test_enum.py  test_loader.py  test_post_impl.py  test_stubs.py
(+21 files in other folders)
