[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ursa"
version = "0.1.0"
description = "Ursa — Offensive Security Toolkit"
requires-python = ">=3.11"
dependencies = [
    "scapy>=2.5.0",
    "mcp[cli]>=1.0.0",
    "paramiko>=3.0.0",
    "click>=8.0.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "uvicorn>=0.30.0",
    "sse-starlette>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
dev = [
    "mypy>=1.11",
    "ruff>=0.6",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = [".", "minor/src"]
include = ["major*", "ursa_minor*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "minor/src"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "network: tests requiring mocked network I/O",
    "slow: tests that take >1s to run",
]

[tool.coverage.run]
source = ["major", "minor/src/ursa_minor"]
omit = ["tests/*", "venv/*"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["major", "ursa_minor"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
no_implicit_optional = true
exclude = [
    "venv/",
    "minor/server.py",
]
