[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ursa-minor"
version = "0.1.0"
description = "Ursa Minor — Recon & Scanning Toolkit"
requires-python = ">=3.11"
dependencies = [
    "scapy>=2.5.0",
    "mcp[cli]>=1.0.0",
    "paramiko>=3.0.0",
    "click>=8.0.0",
]

[project.scripts]
ursa = "ursa_minor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
